fixed uneven padding inside gameboard

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
     left: 0;
     right: 0;
     /* height: 68px; */
-    height: 76px;
+    height: 60px;
     background-color: rgba(250,237,225,0.80);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.24), 0 1px 2px rgba(0, 0, 0, 0.377);
     /* background-color: #26bf91; */
@@ -36,7 +36,7 @@ h1, #info {
     font-family: 'Montserrat', sans-serif;
     color: #58B59D;
     /* color: #FAEDE1; */
-    font-size: 2.1rem;
+    font-size: 1.9rem;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.19);
     margin: auto;
     text-align: center;
@@ -55,6 +55,7 @@ h1 {
     padding-bottom: 0.7rem;
     display: flex
     flex-direction: column;
+    padding: 2px 0 2px 0;
 }
 
 /* .divider {
@@ -64,8 +65,8 @@ h1 {
 
 #gameboard {
     width: 600px;
-    height: 640px;
-    margin-top: 5.5rem;
+    height: 644px;
+    margin-top: 4.5rem;
     display: flex;
     flex-wrap: wrap;
     padding: 25px;
@@ -78,8 +79,8 @@ h1 {
 
 #gameboard-fade {
     width: 600px;
-    height: 640px;
-    margin-top: 5.5rem;
+    height: 644px;
+    margin-top: 4.5rem;
     padding: 25px;
     position: absolute;
     background-color: #FAEDE1;
